Closed Bug 1590868 Opened 6 years ago Closed 6 years ago

Crash in [@ nsExtProtocolChannel::OnStartRequest]

Categories

(Core :: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox-esr68 --- unaffected
firefox69 --- unaffected
firefox70 --- unaffected
firefox71 --- unaffected
firefox72 --- fixed

People

(Reporter: calixte, Assigned: mattwoodrow)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: crash, regression, Whiteboard: [necko-triaged])

Crash Data

Attachments

(1 file)

This bug is for crash report bp-577fd267-1188-423a-8565-f13f20191023.

Top 10 frames of crashing thread:

0 XUL nsExtProtocolChannel::OnStartRequest uriloader/exthandler/nsExternalProtocolHandler.cpp:434
1 XUL non-virtual thunk to nsExtProtocolChannel::OnStartRequest uriloader/exthandler/nsExternalProtocolHandler.cpp
2 XUL mozilla::net::DocumentChannelParent::FinishReplacementChannelSetup netwerk/ipc/DocumentChannelParent.cpp:316
3 XUL <name omitted> netwerk/ipc/DocumentChannelParent.cpp:192
4 XUL mozilla::MozPromise<nsresult, mozilla::ipc::ResponseRejectReason, true>::ThenValue<mozilla::net::DocumentChannelParent::TriggerRedirectToRealChannel xpcom/threads/MozPromise.h:726
5 XUL mozilla::MozPromise<nsresult, mozilla::ipc::ResponseRejectReason, true>::ThenValueBase::ResolveOrRejectRunnable::Run xpcom/threads/MozPromise.h:402
6 XUL nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1225
7 XUL NS_ProcessPendingEvents xpcom/threads/nsThreadUtils.cpp:434
8 XUL nsBaseAppShell::NativeEventCallback widget/nsBaseAppShell.cpp:87
9 XUL nsAppShell::ProcessGeckoEvents widget/cocoa/nsAppShell.mm:440

There are 10 crashes (from 5 installations) in nightly 72 with buildid 20191023094816. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1583700.

[1] https://hg.mozilla.org/mozilla-central/rev?node=a30fe09fc6be

Flags: needinfo?(matt.woodrow)

The crash reason is: MOZ_CRASH(No data expected from external protocol channel)

OS: Unspecified → All
Hardware: Unspecified → All
Assignee: nobody → matt.woodrow
Flags: needinfo?(matt.woodrow)
Priority: -- → P2
Whiteboard: [necko-triaged]
Pushed by mwoodrow@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/380e2740f4ef Don't crash if nsExtProtocolChannel::OnStartRequest is called, since it can happen with DocumentChannel process selection. r=mayhemer
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72

Hi Matt, is qa required here? And if it does, could you please provide some steps? Thanks!

Flags: needinfo?(matt.woodrow)

I don't think we had any STR for this, so there's not much to be done (except confirming that the crash reports have stopped, which I just did).

Flags: needinfo?(matt.woodrow)
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: