Bug 1590868 - Don't crash if nsExtProtocolChannel::OnStartRequest is called, since it can happen with DocumentChannel process selection. r=mayhemer

Differential Revision: https://phabricator.services.mozilla.com/D50896